<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.UpdateTaskActivity">

    <EditText
        android:id="@+id/edit_update_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColor="@color/main_text"
        android:textColorHint="@color/main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <MultiAutoCompleteTextView
        android:id="@+id/edit_update_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/description"
        android:textColor="@color/main_text"
        android:textColorHint="@color/main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_update_title" />

    <EditText
        android:id="@+id/edit_update_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/topic"
        android:inputType="textPersonName"
        android:textColor="@color/main_text"
        android:textColorHint="@color/main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_update_description" />

    <Button
        android:id="@+id/button_update_show_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:paddingLeft="0dp"
        android:text="aaaa/mm/dd"
        android:textColor="@color/main_text"
        android:textColorHint="@color/main_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edit_update_topic"
        app:layout_constraintTop_toBottomOf="@+id/check_update_is_complete" />

    <Button
        android:id="@+id/button_update_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update_show_date_picker" />

    <CheckBox
        android:id="@+id/check_update_is_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/is_completed"
        android:textColor="@color/main_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edit_update_topic"
        app:layout_constraintTop_toBottomOf="@+id/edit_update_topic" />
</androidx.constraintlayout.widget.ConstraintLayout>